<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loggedInUserTextView"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="16sp"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/logoutButton"
        android:text="@string/Logout"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints="emailAddress"
        android:hint="@string/email_prompt"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints="password"
        android:hint="@string/password_prompt"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/register_prompt"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login_prompt"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>
</LinearLayout>
