<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_QRScan">

    <fragment
        android:id="@+id/navigation_TimeLine"
        android:name="com.example.myapplication.Timeline"
        android:label="@string/title_TimeLine"
        tools:layout="@layout/fragment_timeline" />

    <fragment
        android:id="@+id/navigation_Artefacts"
        android:name="com.example.myapplication.Artefacts"
        android:label="@string/title_Artefacts"
        tools:layout="@layout/fragment_artefacts" >
        <action
            android:id="@+id/action_navigation_Artefacts_to_navigation_ArtefactDetailView"
            app:destination="@id/navigation_ArtefactDetailView"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_SuggestChange"
        android:name="com.example.myapplication.SuggestChange"
        android:label="@string/title_SuggestChange"
        tools:layout="@layout/fragment_suggest_change" />

    <fragment
        android:id="@+id/navigation_QRScan"
        android:name="com.example.myapplication.QRScan"
        android:label="@string/title_QRScan"
        tools:layout="@layout/fragment_q_r_scan" >
        <action
            android:id="@+id/action_navigation_QRScan_to_navigation_ArtefactDetailView"
            app:destination="@id/navigation_ArtefactDetailView"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_Badges"
        android:name="com.example.myapplication.Badges"
        android:label="@string/title_Badges"
        tools:layout="@layout/fragment_badges" />

    <fragment
        android:id="@+id/navigation_ArtefactDetailView"
        android:name="com.example.myapplication.ArtefactDetailView"
        android:label="ArtefactDetailView"
        tools:layout="@layout/fragment_artefactview" >
        <action
            android:id="@+id/action_navigation_ArtefactDetailView_to_navigation_Artefacts"
            app:destination="@id/navigation_Artefacts"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_ArtefactDetailView_to_navigation_QRScan"
            app:destination="@id/navigation_QRScan"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <argument android:name="ChosenArtefact"
            app:argType="com.example.myapplication.Artefact" />
    </fragment>

</navigation>